label inside .Search needs to be aligned correctly.

--- a/terabyte/src/Topstyle.css
+++ b/terabyte/src/Topstyle.css
@@ -88,10 +88,7 @@ h1 {
 }
 
 .search {
-    display: flex;
     position: relative;
-    justify-content: center;
-    align-items: center;
     padding: 0;
 }
 
@@ -100,10 +97,11 @@ h1 {
     display: flex;
     align-items: center;
     /* left: 10px; */
+    /* border: 2px solid red; */
     top: 50%;
     transform: translateY(-50%);
-    padding: 0 5px;
-    padding-left: 5%;
+    /* padding: 0 5px;
+    padding-left: 5%; */
     transition: transform 0.3s ease, font-size 0.3s ease;
     pointer-events: none;
     font-size: 1.2em;
